# build-a-llm-from-scratch

./: .gitignore  main.py  pyproject.toml
.ipynb_checkpoints/: test-meridian-checkpoint.ipynb
appendix-d/: appendix-D.ipynb
appendix-e/: appendix-E.ipynb
chapter-2/: chapter-2.ipynb
chapter-3/: chapter-3.ipynb
chapter-4/: chapter-4.ipynb
chapter-5/: chapter-5.ipynb
chapter-5/.ipynb_checkpoints/: chapter-5-checkpoint.ipynb
chapter-5/gpt2/1558M/: model.ckpt.index
chapter-6/: chapter-6.ipynb  chapter2.py  chapter5.py
chapter-7/: chapter-7.ipynb  chapter3.py  chapter4.py  chapter5.py  create-preference-data-ollama.ipynb  dpo-from-scratch.ipynb  instruction-data-with-preference-gemma.json  instruction-data-with-response.json
