[project]
name = "build-a-llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "tensorflow>=2.20.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
]
